<resources>
    <string name="app_name">DatabaseApp</string>
    <string name="delete_message">Delete this show from your list?</string>
    <string name="add_message">Add this show to your list?</string>
    <string name="error_add_message">Write something in fields above</string>
    <string name="write_show_title">Write show title</string>
    <string name="write_number_of_series">Write number of series</string>
    <string name="add">Add</string>
    <string name="edit_your_show">Edit your show:</string>
    <string name="confirm">confirm</string>
    <string name="shows_list">Shows List</string>
    <string name="add_show">Add Show</string>
    <string name="search">Search</string>
</resources>