<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_show"
        android:textColor="@color/teal_700"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/show_name_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/write_show_title"
        android:padding="16dp" />

    <EditText
        android:id="@+id/series_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/write_number_of_series"
        android:padding="16dp" />

    <Button
        android:id="@+id/confirm_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/confirm" />

</LinearLayout>